// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagData TagData has a tooltip 1`] = `
<div
  className="box relative rounding2 xsDisplayInlineBlock"
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div
    className="box xsDisplayBlock"
  >
    <div
      aria-label="This is a tooltip"
      className="box"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        aria-disabled={false}
        className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="solid transparentBorder tagMedium secondary tagWrapperRounded"
          style={
            Object {
              "backgroundColor": "#0081fe1A",
              "borderColor": "#0081fe",
            }
          }
        >
          <div
            className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <span
              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
              style={
                Object {
                  "WebkitLineClamp": 1,
                }
              }
              title="Text Impressions"
            >
              Text Impressions
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TagData renders all colors as expected 1`] = `
<div
  className="Flex rowGap2 columnGap2 xsDirectionRow"
>
  <div
    className="FlexItem"
  >
    <div
      className="box relative rounding2 xsDisplayInlineBlock"
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <div
        className="box xsDisplayBlock"
      >
        <div
          aria-label="This is a tooltip"
          className="box"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="solid transparentBorder tagMedium secondary tagWrapperRounded"
              style={
                Object {
                  "backgroundColor": "#003c961A",
                  "borderColor": "#003c96",
                }
              }
            >
              <div
                className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <span
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                  title="Text Impressions"
                >
                  Text Impressions
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box relative rounding2 xsDisplayInlineBlock"
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <div
        className="box xsDisplayBlock"
      >
        <div
          aria-label="This is a tooltip"
          className="box"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="solid transparentBorder tagMedium secondary tagWrapperRounded"
              style={
                Object {
                  "backgroundColor": "#11a69c1A",
                  "borderColor": "#11a69c",
                }
              }
            >
              <div
                className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <span
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                  title="Text Impressions"
                >
                  Text Impressions
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box relative rounding2 xsDisplayInlineBlock"
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <div
        className="box xsDisplayBlock"
      >
        <div
          aria-label="This is a tooltip"
          className="box"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="solid transparentBorder tagMedium secondary tagWrapperRounded"
              style={
                Object {
                  "backgroundColor": "#924af71A",
                  "borderColor": "#924af7",
                }
              }
            >
              <div
                className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <span
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                  title="Text Impressions"
                >
                  Text Impressions
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box relative rounding2 xsDisplayInlineBlock"
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <div
        className="box xsDisplayBlock"
      >
        <div
          aria-label="This is a tooltip"
          className="box"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="solid transparentBorder tagMedium secondary tagWrapperRounded"
              style={
                Object {
                  "backgroundColor": "#d177111A",
                  "borderColor": "#d17711",
                }
              }
            >
              <div
                className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <span
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                  title="Text Impressions"
                >
                  Text Impressions
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box relative rounding2 xsDisplayInlineBlock"
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <div
        className="box xsDisplayBlock"
      >
        <div
          aria-label="This is a tooltip"
          className="box"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="solid transparentBorder tagMedium secondary tagWrapperRounded"
              style={
                Object {
                  "backgroundColor": "#0081fe1A",
                  "borderColor": "#0081fe",
                }
              }
            >
              <div
                className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <span
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                  title="Text Impressions"
                >
                  Text Impressions
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box relative rounding2 xsDisplayInlineBlock"
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <div
        className="box xsDisplayBlock"
      >
        <div
          aria-label="This is a tooltip"
          className="box"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="solid transparentBorder tagMedium secondary tagWrapperRounded"
              style={
                Object {
                  "backgroundColor": "#ff53831A",
                  "borderColor": "#ff5383",
                }
              }
            >
              <div
                className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <span
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                  title="Text Impressions"
                >
                  Text Impressions
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box relative rounding2 xsDisplayInlineBlock"
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <div
        className="box xsDisplayBlock"
      >
        <div
          aria-label="This is a tooltip"
          className="box"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="solid transparentBorder tagMedium secondary tagWrapperRounded"
              style={
                Object {
                  "backgroundColor": "#00ab551A",
                  "borderColor": "#00ab55",
                }
              }
            >
              <div
                className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <span
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                  title="Text Impressions"
                >
                  Text Impressions
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box relative rounding2 xsDisplayInlineBlock"
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <div
        className="box xsDisplayBlock"
      >
        <div
          aria-label="This is a tooltip"
          className="box"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="solid transparentBorder tagMedium secondary tagWrapperRounded"
              style={
                Object {
                  "backgroundColor": "#4003871A",
                  "borderColor": "#400387",
                }
              }
            >
              <div
                className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <span
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                  title="Text Impressions"
                >
                  Text Impressions
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box relative rounding2 xsDisplayInlineBlock"
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <div
        className="box xsDisplayBlock"
      >
        <div
          aria-label="This is a tooltip"
          className="box"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="solid transparentBorder tagMedium secondary tagWrapperRounded"
              style={
                Object {
                  "backgroundColor": "#f2681f1A",
                  "borderColor": "#f2681f",
                }
              }
            >
              <div
                className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <span
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                  title="Text Impressions"
                >
                  Text Impressions
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box relative rounding2 xsDisplayInlineBlock"
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <div
        className="box xsDisplayBlock"
      >
        <div
          aria-label="This is a tooltip"
          className="box"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="solid transparentBorder tagMedium secondary tagWrapperRounded"
              style={
                Object {
                  "backgroundColor": "#0050621A",
                  "borderColor": "#005062",
                }
              }
            >
              <div
                className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <span
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                  title="Text Impressions"
                >
                  Text Impressions
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box relative rounding2 xsDisplayInlineBlock"
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <div
        className="box xsDisplayBlock"
      >
        <div
          aria-label="This is a tooltip"
          className="box"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="solid transparentBorder tagMedium secondary tagWrapperRounded"
              style={
                Object {
                  "backgroundColor": "#de2c621A",
                  "borderColor": "#de2c62",
                }
              }
            >
              <div
                className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <span
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                  title="Text Impressions"
                >
                  Text Impressions
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box relative rounding2 xsDisplayInlineBlock"
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <div
        className="box xsDisplayBlock"
      >
        <div
          aria-label="This is a tooltip"
          className="box"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="solid transparentBorder tagMedium secondary tagWrapperRounded"
              style={
                Object {
                  "backgroundColor": "#660e001A",
                  "borderColor": "#660e00",
                }
              }
            >
              <div
                className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <span
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                  title="Text Impressions"
                >
                  Text Impressions
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TagData renders base color as expected 1`] = `
<div
  className="Flex rowGap2 columnGap2 xsDirectionRow"
>
  <div
    className="FlexItem"
  >
    <div
      className="box relative rounding2 xsDisplayInlineBlock"
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <div
        className="box xsDisplayBlock"
      >
        <div
          aria-label="This is a tooltip"
          className="box"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="solid transparentBorder tagMedium default tagWrapperRounded"
              style={
                Object {
                  "backgroundColor": "#0081fe1A",
                  "borderColor": "#0081fe",
                }
              }
            >
              <div
                className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <div
                  className="box marginEnd1"
                >
                  <div
                    className="box"
                  >
                    <div
                      className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
                    >
                      <div
                        className="box paddingX1 relative"
                      >
                        <input
                          aria-hidden={true}
                          aria-invalid="false"
                          checked={true}
                          className="input sizeSm inputEnabled readOnly"
                          disabled={true}
                          id="readonly-checkbox-:r2:"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          type="checkbox"
                        />
                        <div
                          className="darkGrayBg borderSelected borderRadiusSm sizeSm check"
                          style={
                            Object {
                              "backgroundColor": "#0081fe",
                              "borderColor": "transparent",
                            }
                          }
                        >
                          <svg
                            aria-hidden={true}
                            aria-label=""
                            className="icon inverseIcon iconBlock"
                            height={8}
                            role="img"
                            viewBox="0 0 24 24"
                            width={8}
                          >
                            <path
                              d="test-file-stub"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                  title="Text Impressions"
                >
                  Text Impressions
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box relative rounding2 xsDisplayInlineBlock"
      style={
        Object {
          "maxWidth": 300,
        }
      }
    >
      <div
        className="box xsDisplayBlock"
      >
        <div
          aria-label="This is a tooltip"
          className="box"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="solid transparentBorder tagMedium secondary tagWrapperRounded"
              style={
                Object {
                  "backgroundColor": "#0081fe1A",
                  "borderColor": "#0081fe",
                }
              }
            >
              <div
                className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
                style={
                  Object {
                    "height": "100%",
                  }
                }
              >
                <div
                  className="box marginEnd1"
                >
                  <div
                    className="box"
                  >
                    <div
                      className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
                    >
                      <div
                        className="box paddingX1 relative"
                      >
                        <input
                          aria-hidden={true}
                          aria-invalid="false"
                          checked={true}
                          className="input sizeSm inputEnabled readOnly"
                          disabled={true}
                          id="readonly-checkbox-:r3:"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          type="checkbox"
                        />
                        <div
                          className="darkGrayBg borderSelected borderRadiusSm sizeSm check"
                          style={
                            Object {
                              "backgroundColor": "#0081fe",
                              "borderColor": "transparent",
                            }
                          }
                        >
                          <svg
                            aria-hidden={true}
                            aria-label=""
                            className="icon inverseIcon iconBlock"
                            height={8}
                            role="img"
                            viewBox="0 0 24 24"
                            width={8}
                          >
                            <path
                              d="test-file-stub"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                  title="Text Impressions"
                >
                  Text Impressions
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TagData renders disabled selected state 1`] = `
<div
  className="box relative rounding2 xsDisplayInlineBlock"
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div
    aria-disabled={true}
    className="hideOutline tapTransition rounding2 fullHeight fullWidth"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={null}
  >
    <div
      className="solid transparentBorder tagMedium secondary disabled tagWrapperRounded"
      style={Object {}}
    >
      <div
        className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
        style={
          Object {
            "height": "100%",
          }
        }
      >
        <div
          className="box marginEnd1"
        >
          <div
            className="box"
          >
            <div
              className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
            >
              <div
                className="box paddingX1 relative"
              >
                <input
                  aria-hidden={true}
                  aria-invalid="false"
                  checked={true}
                  className="input sizeSm inputEnabled readOnly"
                  disabled={true}
                  id="readonly-checkbox-:rg:"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  type="checkbox"
                />
                <div
                  className="darkGrayBg borderSelected borderRadiusSm sizeSm check"
                  style={
                    Object {
                      "backgroundColor": "var(--color-gray-roboflow-300)",
                      "borderColor": "transparent",
                    }
                  }
                >
                  <svg
                    aria-hidden={true}
                    aria-label=""
                    className="icon inverseIcon iconBlock"
                    height={8}
                    role="img"
                    viewBox="0 0 24 24"
                    width={8}
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          className="Text fontSize200 subtleText alignStart breakWord fontWeightNormal lineClamp"
          style={
            Object {
              "WebkitLineClamp": 1,
            }
          }
          title="Text Impressions"
        >
          Text Impressions
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TagData renders disabled unselected state 1`] = `
<div
  className="box relative rounding2 xsDisplayInlineBlock"
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div
    aria-disabled={true}
    className="hideOutline tapTransition rounding2 fullHeight fullWidth"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={null}
  >
    <div
      className="solid transparentBorder tagMedium secondary disabled tagWrapperRounded"
      style={Object {}}
    >
      <div
        className="box marginEnd0 paddingX2 xsDisplayFlex xsItemsCenter"
        style={
          Object {
            "height": "100%",
          }
        }
      >
        <div
          className="box marginEnd1"
        >
          <div
            className="box"
          >
            <div
              className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
            >
              <div
                className="box paddingX1 relative"
              >
                <input
                  aria-hidden={true}
                  aria-invalid="false"
                  checked={false}
                  className="input sizeSm inputEnabled readOnly"
                  disabled={true}
                  id="readonly-checkbox-:rh:"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  type="checkbox"
                />
                <div
                  className="whiteBg border borderRadiusSm sizeSm check"
                  style={
                    Object {
                      "backgroundColor": "var(--color-gray-roboflow-300)",
                      "borderColor": "transparent",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <span
          className="Text fontSize200 subtleText alignStart breakWord fontWeightNormal lineClamp"
          style={
            Object {
              "WebkitLineClamp": 1,
            }
          }
          title="Text Impressions"
        >
          Text Impressions
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TagData renders dismisible button with color background 1`] = `
<div
  className="box relative rounding2 xsDisplayInlineBlock"
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div
    className="box xsDisplayBlock"
  >
    <div
      aria-label="This is a tooltip"
      className="box"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        aria-disabled={false}
        className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="solid transparentBorder tagMedium secondary tagWrapperRounded"
          style={
            Object {
              "backgroundColor": "#924af71A",
              "borderColor": "#924af7",
            }
          }
        >
          <div
            className="box marginEnd4 paddingX2 xsDisplayFlex xsItemsCenter"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              className="box marginEnd1"
            >
              <div
                className="box"
              >
                <div
                  className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
                >
                  <div
                    className="box paddingX1 relative"
                  >
                    <input
                      aria-hidden={true}
                      aria-invalid="false"
                      checked={true}
                      className="input sizeSm inputEnabled readOnly"
                      disabled={true}
                      id="readonly-checkbox-:rj:"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      type="checkbox"
                    />
                    <div
                      className="darkGrayBg borderSelected borderRadiusSm sizeSm check"
                      style={
                        Object {
                          "backgroundColor": "#924af7",
                          "borderColor": "transparent",
                        }
                      }
                    >
                      <svg
                        aria-hidden={true}
                        aria-label=""
                        className="icon inverseIcon iconBlock"
                        height={8}
                        role="img"
                        viewBox="0 0 24 24"
                        width={8}
                      >
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <span
              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
              style={
                Object {
                  "WebkitLineClamp": 1,
                }
              }
              title="Text Impressions"
            >
              Text Impressions
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="solid transparentBorder dismissButton dismissButtonRounding dismissButtonPosition hideOutline secondary accessibilityOutline"
    disabled={false}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": "#924af71A",
        "borderColor": "#924af7",
      }
    }
    type="button"
  >
    <div
      className="box justifyCenter xsDisplayFlex xsItemsCenter"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <svg
        aria-hidden={null}
        aria-label="Remove tag"
        className="icon defaultIcon iconBlock"
        height={10}
        role="img"
        viewBox="0 0 24 24"
        width={10}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`TagData renders dismissable button 1`] = `
<div
  className="box relative rounding2 xsDisplayInlineBlock"
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div
    className="box xsDisplayBlock"
  >
    <div
      aria-label="This is a tooltip"
      className="box"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        aria-disabled={false}
        className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="solid transparentBorder tagMedium secondary tagWrapperRounded"
          style={
            Object {
              "backgroundColor": "#0081fe1A",
              "borderColor": "#0081fe",
            }
          }
        >
          <div
            className="box marginEnd4 paddingX2 xsDisplayFlex xsItemsCenter"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              className="box marginEnd1"
            >
              <div
                className="box"
              >
                <div
                  className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
                >
                  <div
                    className="box paddingX1 relative"
                  >
                    <input
                      aria-hidden={true}
                      aria-invalid="false"
                      checked={true}
                      className="input sizeSm inputEnabled readOnly"
                      disabled={true}
                      id="readonly-checkbox-:ri:"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      type="checkbox"
                    />
                    <div
                      className="darkGrayBg borderSelected borderRadiusSm sizeSm check"
                      style={
                        Object {
                          "backgroundColor": "#0081fe",
                          "borderColor": "transparent",
                        }
                      }
                    >
                      <svg
                        aria-hidden={true}
                        aria-label=""
                        className="icon inverseIcon iconBlock"
                        height={8}
                        role="img"
                        viewBox="0 0 24 24"
                        width={8}
                      >
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <span
              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
              style={
                Object {
                  "WebkitLineClamp": 1,
                }
              }
              title="Text Impressions"
            >
              Text Impressions
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="solid transparentBorder dismissButton dismissButtonRounding dismissButtonPosition hideOutline secondary accessibilityOutline"
    disabled={false}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": "#0081fe1A",
        "borderColor": "#0081fe",
      }
    }
    type="button"
  >
    <div
      className="box justifyCenter xsDisplayFlex xsItemsCenter"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <svg
        aria-hidden={null}
        aria-label="Remove tag"
        className="icon defaultIcon iconBlock"
        height={10}
        role="img"
        viewBox="0 0 24 24"
        width={10}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`TagData renders tagdata in RTL mode as expected 1`] = `
<html
  dir="rtl"
  lang="en"
>
  <div
    className="box relative rounding2 xsDisplayInlineBlock"
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <div
      aria-disabled={false}
      className="hideOutline tapTransition rounding2 accessibilityOutline fullHeight fullWidth pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="solid transparentBorder tagMedium secondary tagWrapperRounded"
        style={Object {}}
      >
        <div
          className="box marginEnd4 paddingX2 xsDisplayFlex xsItemsCenter"
          style={
            Object {
              "height": "100%",
            }
          }
        >
          <div
            className="box marginEnd1"
          >
            <div
              className="box"
            >
              <div
                className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
              >
                <div
                  className="box paddingX1 relative"
                >
                  <input
                    aria-hidden={true}
                    aria-invalid="false"
                    checked={false}
                    className="input sizeSm inputEnabled readOnly"
                    disabled={true}
                    id="readonly-checkbox-:r1:"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    type="checkbox"
                  />
                  <div
                    className="whiteBg border borderRadiusSm sizeSm check"
                    style={
                      Object {
                        "backgroundColor": "var(--g-colorGray0)",
                        "borderColor": "var(--color-border-default)",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <span
            className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
            style={
              Object {
                "WebkitLineClamp": 1,
              }
            }
            title="RTL Text Tag"
          >
            RTL Text Tag
          </span>
        </div>
      </div>
    </div>
    <button
      className="solid transparentBorder dismissButton dismissButtonRounding dismissButtonPosition hideOutline secondary accessibilityOutline"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={Object {}}
      type="button"
    >
      <div
        className="box justifyCenter xsDisplayFlex xsItemsCenter"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <svg
          aria-hidden={null}
          aria-label="Remove tag"
          className="icon defaultIcon iconBlock"
          height={10}
          role="img"
          viewBox="0 0 24 24"
          width={10}
        >
          <path
            d="test-file-stub"
          />
        </svg>
      </div>
    </button>
  </div>
</html>
`;
